feat: Try adding `use_original_filename` at the logical level
There may be omissions
