# app/serializers/api/upload_app_serializer.rb
@@ -5,7 +5,7 @@ class Api::UploadAppSerializer < ApplicationSerializer
   attributes :id, :version, :app_name, :bundle_id, :release_version, :build_version,
              :source, :branch, :git_commit, :ci_url, :size, :platform, :device_type,
              :icon_url, :release_url, :install_url, :qrcode_url, :changelog, :text_changelog,
-             :custom_fields, :created_at
+             :custom_fields, :created_at, :use_original_filename
 
   belongs_to :app
   belongs_to :scheme
