# app/serializers/release_serializer.rb
@@ -4,7 +4,7 @@ class ReleaseSerializer < ApplicationSerializer
   attributes :id, :version, :app_name, :bundle_id, :release_version, :build_version,
              :source, :branch, :git_commit, :ci_url, :size, :platform, :device_type,
              :icon_url, :install_url, :changelog, :text_changelog, :custom_fields,
-             :created_at
+             :created_at, :use_original_filename
 
 
   def changelog
