# swagger/v1/swagger_en.json
@@ -2393,6 +2393,10 @@
           "created_at": {
             "type": "date",
             "example": "2024-03-01 12:00:00 +0800"
+          },
+          "use_original_filename": {
+            "type": "boolean",
+            "example": true
           }
         }
       },
@@ -2871,6 +2875,10 @@
           "type": "string",
           "description": "the build url of a CI service"
         },
+        "use_original_filename": {
+          "type": "boolean",
+          "example": true
+        },
         "custom_fields": {
           "type": "array",
           "items": {
@@ -2997,6 +3005,10 @@
         "ci_url": {
           "type": "string",
           "description": "the build url of a CI service"
+        },
+        "use_original_filename": {
+          "type": "boolean",
+          "example": true
         },
         "custom_fields": {
           "type": "array",
